--- a/V1/package.json
+++ b/V1/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "^14.0.0",
-    "@supabase/supabase-js": "^2.38.0"
+    "@supabase/supabase-js": "^2.38.0",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.0",
