Add company role workspace and radar chat

--- a/V1/.env.example
+++ b/V1/.env.example
@@ -2,3 +2,8 @@
 # Copy this file to .env.local and fill in your actual values
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_URL=https://your-project.supabase.co
+# Server-only service role key; do not expose in client bundles
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+OPENAI_API_KEY=your-openai-key
+OPENAI_MODEL=gpt-4o-mini
