--- a/V1/.env.example
+++ b/V1/.env.example
@@ -6,4 +6,5 @@ SUPABASE_URL=https://your-project.supabase.co
 # Server-only service role key; do not expose in client bundles
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 OPENAI_API_KEY=your-openai-key
-OPENAI_MODEL=gpt-4o-mini
+# Model default; can be overridden per env
+OPENAI_MODEL=gpt-5.2-2025-12-11
